# jq-ble

./: .gitignore  AGENTS.md  Cargo.toml  README.md  flake.nix  justfile
.github/workflows/: check.yml  policy.yml
crates/demo/: Cargo.toml
crates/demo/src/: lib.rs
crates/demo/tests/: stranger_relay.rs
crates/jq-client/: Cargo.toml
crates/jq-client/src/: bridge.rs  client.rs  effects.rs  framing.rs  lib.rs  multicast.rs  projector.rs  routing.rs
crates/jq-client/tests/: bridge.rs  bridge_contract.rs  client.rs  common.rs  topology.rs
crates/jq-link-profile/: Cargo.toml
crates/jq-link-profile/src/: cast.rs  gatt.rs  l2cap.rs  lib.rs  notify.rs  session.rs  startup.rs  task.rs  transport.rs
crates/jq-link-profile/tests/: policy.rs  runtime.rs
crates/jq-node-profile/: Cargo.toml
crates/jq-node-profile/src/: authoring.rs  lib.rs  topology.rs
crates/jq-node-profile/tests/: topology.rs
policy/: README.md  toolkit.toml
scripts/: preflight.sh  release-packages.sh  release-publish.sh  toolkit-shell.sh
toolkit/: toolkit.toml
