[workspace]
members = [
    "crates/demo",
    "crates/jq-client",
    "crates/jq-link-profile",
    "crates/jq-node-profile",
]
resolver = "2"

[workspace.dependencies]
blew = { version = "0.1.0-alpha.3", git = "https://github.com/mcginty/blew", package = "blew" }
jacquard-cast-support = "0.8.0"
jacquard-core = "0.8.0"
jacquard-host-support = "0.8.0"
jacquard-mem-link-profile = "0.8.0"
jacquard-mem-node-profile = "0.8.0"
jacquard-mercator = "0.8.0"
jacquard-reference-client = "0.8.0"
jacquard-router = "0.8.0"
jacquard-testkit = "0.8.0"
jacquard-traits = "0.8.0"
