[workspace]
members = [
    "crates/demo",
    "crates/jq-client",
    "crates/jq-link-profile",
    "crates/jq-node-profile",
]
resolver = "2"

[workspace.dependencies]
blew = "0.2.3"
jacquard-cast-support = "0.9.0"
jacquard-core = "0.9.0"
jacquard-host-support = "0.9.0"
jacquard-mem-link-profile = "0.9.0"
jacquard-mem-node-profile = "0.9.0"
jacquard-mercator = "0.9.0"
jacquard-reference-client = "0.9.0"
jacquard-router = "0.9.0"
jacquard-testkit = "0.9.0"
jacquard-traits = "0.9.0"
