[package]
name = "demo"
version = "0.1.0"
edition = "2024"
authors = ["Sam Hart <sam@hxrts.com>"]
license = "Apache-2.0"
description = "Generic host integration demo for Jacquard over BLE via blew"
repository = "https://github.com/hxrts/jq-ble"
publish = false

[dependencies]
futures-util = "0.3"
hex = "0.4"
jacquard-core = "0.3.2"
jq-client = { path = "../jq-client" }
jq-node-profile = { path = "../jq-node-profile" }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["sync", "rt", "time"] }

[dev-dependencies]
jacquard-adapter = "0.3.2"
jacquard-batman = "0.3.2"
jacquard-core = "0.3.2"
jacquard-mem-node-profile = "0.3.2"
jacquard-pathway = "0.3.2"
jacquard-traits = "0.3.2"
tokio = { version = "1", features = ["macros", "rt", "time"] }
