[package]
name = "demo"
version = "0.1.0"
edition = "2024"
authors = ["Sam Hart <sam@hxrts.com>"]
license = "Apache-2.0"
description = "Generic host integration demo for Jacquard over BLE via blew"
repository = "https://github.com/hxrts/jq-ble"
publish = false

[dependencies]
futures-util = "0.3"
hex = "0.4"
jacquard-core = { workspace = true }
jq-client = { path = "../jq-client" }
jq-node-profile = { path = "../jq-node-profile" }
serde = { version = "1", default-features = false, features = ["derive"] }
thiserror = "2"
tokio = { version = "1", default-features = false, features = ["sync", "rt", "time"] }

[dev-dependencies]
jacquard-core = { workspace = true }
jacquard-host-support = { workspace = true }
jacquard-mem-node-profile = { workspace = true }
jacquard-mercator = { workspace = true }
jacquard-traits = { workspace = true }
tokio = { version = "1", default-features = false, features = ["macros", "rt", "time"] }
