[package]
name = "jq-client"
version = "0.1.0"
edition = "2024"
authors = ["Jake McGinty <me@jakebot.org>"]
license = "Apache-2.0"
description = "Host bridge and client assembly for Jacquard BLE routing"
repository = "https://github.com/hxrts/jq-ble"
keywords = ["bluetooth", "ble", "jacquard", "mesh", "routing"]
categories = ["network-programming"]

[dependencies]
bytes = "1"
futures-util = "0.3"
jacquard-adapter = "0.3.2"
jacquard-batman = "0.3.2"
jacquard-core = "0.3.2"
jacquard-mem-link-profile = "0.3.2"
jacquard-mem-node-profile = "0.3.2"
jacquard-pathway = "0.3.2"
jacquard-router = "0.3.2"
jacquard-traits = "0.3.2"
jq-link-profile = { version = "0.1.0", path = "../jq-link-profile" }
jq-node-profile = { version = "0.1.0", path = "../jq-node-profile" }
thiserror = "2"
tokio = { version = "1", default-features = false, features = ["rt", "sync", "macros"] }
tokio-stream = { version = "0.1", features = ["sync"] }

[dev-dependencies]
jacquard-reference-client = "0.3.2"
