[package]
name = "jq-client"
version = "0.1.0"
edition = "2024"
authors = ["Jake McGinty <me@jakebot.org>"]
license = "Apache-2.0"
description = "Host bridge and client assembly for Jacquard BLE routing"
repository = "https://github.com/hxrts/jq-ble"
keywords = ["bluetooth", "ble", "jacquard", "mesh", "routing"]
categories = ["network-programming"]

[dependencies]
bytes = "1"
futures-util = "0.3"
jacquard-adapter = { workspace = true }
jacquard-batman-bellman = { workspace = true }
jacquard-core = { workspace = true }
jacquard-mem-link-profile = { workspace = true }
jacquard-mem-node-profile = { workspace = true }
jacquard-pathway = { workspace = true }
jacquard-router = { workspace = true }
jacquard-traits = { workspace = true }
jq-link-profile = { version = "0.1.0", path = "../jq-link-profile" }
jq-node-profile = { version = "0.1.0", path = "../jq-node-profile" }
thiserror = "2"
tokio = { version = "1", default-features = false, features = ["rt", "sync", "macros"] }
tokio-stream = { version = "0.1", features = ["sync"] }

[dev-dependencies]
jacquard-reference-client = { workspace = true }
jacquard-testkit = { workspace = true }
